--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body {
     background-color: black;
 }
+.titulo1 {
+    color: purple;
+}
+.troxo {
+    color: white;
+}
 header {
     color: rgb(255, 255, 255);
 }
-.titulo {
+.titulo2 {
     color: aqua purple;
 }
 
