--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@
     --corseg: #E5D098;
 
 }
-body{
+body {
+  background: url(Polygon\ 2.png), url(Polygon\ 4.png);
+}
+/* body{
     
   background-image: 
     url(Polygon\ 2.png), 
@@ -18,8 +21,7 @@ body{
       center, 
         0 0;
   background-color: 
-    rgb(0, 0, 0);
-}
+    rgb(0, 0, 0); */
 .titulo1 {
     color:var(--roxo);
 }
