--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 }
 body {
-  background: url(Polygon\ 2.png), url(Polygon\ 4.png);
+  background: url(./imagens/Group\ 2.png) /*url(Polygon\ 2.png), url(Polygon\ 4.png)*/;
   background-color: black;
 }
 /* body{
