--- a/style.css
+++ b/style.css
@@ -6,21 +6,21 @@
 }
 body {
   background: /*url(./imagens/file\ cover\ -\ 1.png)*/url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);
-  background-position: repeat-x var(--aletorio)
+  background-repeat: repeat-x var(--aletorio)
   repeat-y var(--aletorio);
 
   background-repeat: no-repeat;
-  background-color: black;
+  background-color: black; 
 }
-/* body{
+/*body{
     
   background-image: 
     url(Polygon\ 2.png), 
       url(Polygon\ 4.png), 
         url(Rectangle\ 2.png),
-          url(./Star\ 2.png);
+          url(./Star\ 2.png);/
   background-repeat: 
-    repeat-x, 
+    repeat-x var(--aleatorio), 
       no-repeat, 
         repeat-y;
   background-position: 
@@ -37,4 +37,3 @@ body {
 header {
     color: rgb(255, 255, 255);
 }
-
