--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
 }
 body {
   background: /*url(./imagens/file\ cover\ -\ 1.png)*/url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);
-  background-repeat: repeat-x, /*var(--aletorio)*/
-  repeat-y /*var(--aletorio)*/;
+  background-repeat: 
+    repeat-x,/*var(--aletorio)*/
+      no-repeat,
+        repeat-y /*var(--aletorio)*/;
 
-  background-repeat: no-repeat;
+/*  background-repeat: no-repeat;*/
   background-color: black; 
 }
 /*body{
