de volta peo normal

--- a/style.css
+++ b/style.css
@@ -1,28 +1,21 @@
 :root{
     --roxo: #CD98E5;
     --corseg: #E5D098;
-    --aletorio: 2;
 
 }
 body {
-  background: /*url(./imagens/file\ cover\ -\ 1.png)*/url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);
-  background-repeat: 
-    repeat-x,/*var(--aletorio)*/
-      no-repeat,
-        repeat-y /*var(--aletorio)*/;
-
-/*  background-repeat: no-repeat;*/
-  background-color: black; 
+  background: url(Polygon\ 2.png), url(Polygon\ 4.png);
+  background-color: black;
 }
-/*body{
+body{
     
   background-image: 
-    url(Polygon\ 2.png), 
-      url(Polygon\ 4.png), 
-        url(Rectangle\ 2.png),
-          url(./Star\ 2.png);/
+    url(./imagens/Polygon\ 2.png), 
+      url(./imagens/Polygon\ 4.png), 
+        url(./imagens/Rectangle\ 2.png),
+          url(./imagens/Star\ 2.png);
   background-repeat: 
-    repeat-x var(--aleatorio), 
+    repeat-x, 
       no-repeat, 
         repeat-y;
   background-position: 
@@ -39,3 +32,4 @@ body {
 header {
     color: rgb(255, 255, 255);
 }
+
