--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@
     --corseg: #E5D098;
 
 }
-body {
+/*body {
   background: url(Polygon\ 2.png), url(Polygon\ 4.png);
   background-color: black;
 }
+*/
 body{
     
   background-image: 
@@ -22,7 +23,7 @@ body{
       center, 
         0 0;
   background-color: 
-    rgb(0, 0, 0); */
+    rgb(0, 0, 0);
 .titulo1 {
     color:var(--roxo);
 }
@@ -33,3 +34,4 @@ header {
     color: rgb(255, 255, 255);
 }
 
+}
