--- a/style.css
+++ b/style.css
@@ -2,12 +2,11 @@
     --roxo: #CD98E5;
     --corseg: #E5D098;
 
-}
-/*body {
+}*body {
   background: url(Polygon\ 2.png), url(Polygon\ 4.png);
   background-color: black;
 }
-*/
+/*
 body{
     
   background-image: 
@@ -23,7 +22,7 @@ body{
       center, 
         0 0;
   background-color: 
-    rgb(0, 0, 0);
+    rgb(0, 0, 0);*/
 .titulo1 {
     color:var(--roxo);
 }
@@ -34,4 +33,3 @@ header {
     color: rgb(255, 255, 255);
 }
 
-}
