--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@
     --roxo: #CD98E5;
     --corseg: #E5D098;
 
-}*body {
+}
+body {
   background: url(Polygon\ 2.png), url(Polygon\ 4.png);
   background-color: black;
 }
