--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@
 
 body{
     
-  background-image: 
-    url(./imagens/Polygon\ 2.png), 
+  background-image:
+    url(./imagens/Frame\ 1.png);
+    /*url(./imagens/Polygon\ 2.png), 
       url(./imagens/Polygon\ 4.png), 
         url(./imagens/Rectangle\ 2.png),
-          url(./imagens/Star\ 2.png);
+          url(./imagens/Star\ 2.png);*/
   background-repeat: 
     repeat-x, 
       no-repeat, 
