--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 body{
     
   background-image:
-    url(./imagens/Frame\ 1.png);
+    url(./imagens/file\ cover\ -\ 1.png);
     /*url(./imagens/Polygon\ 2.png), 
       url(./imagens/Polygon\ 4.png), 
         url(./imagens/Rectangle\ 2.png),
