--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@
 }
 *body {
 /*  background: url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);*/
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(#232025);
 }
 
 body{
     
   background-image:
-    url(./imagens/file\ cover\ -\ 1.png);
+    url(./imagens/Group\ 3.png);
     /*url(./imagens/Polygon\ 2.png), 
       url(./imagens/Polygon\ 4.png), 
         url(./imagens/Rectangle\ 2.png),
