--- a/style.css
+++ b/style.css
@@ -24,15 +24,13 @@ body{
       center, 
         0 0;
   background-color: 
-    rgb(0, 0, 0);
+    rgb(#232025);
 .titulo1 {
     color:var(--roxo);
 
 }
 ul{
   text-align: center;
-
-
 }
 
 .tranco {
@@ -41,4 +39,8 @@ ul{
 header {
     color: rgb(255, 255, 255);
 }
+}
+.carapen{
+  
+
 }
