--- a/style.css
+++ b/style.css
@@ -3,10 +3,10 @@
     --corseg: #E5D098;
 
 }
-*body {
-/*  background: url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);*/
+/*body {
+  background: url(./imagens/Polygon\ 2.png), url(./imagens/Polygon\ 4.png);
   background-color: rgb(#232025);
-}
+}*/
 
 body{
     
@@ -23,8 +23,7 @@ body{
   background-position: 
       center, 
         0 0;
-  background-color: 
-    rgb(#232025);
+  background-color:#232025 ;
 .titulo1 {
     color:var(--roxo);
 
