--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ header {
     color: rgb(255, 255, 255);
 }
 div.primeira_parte{
-    width: fit-content;
+    width: 286px;
     height: fit-content;
     border: 1px solid black;
     padding: 10px;
