--- a/style.css
+++ b/style.css
@@ -54,10 +54,13 @@ div.flecha1{
   position: inherit;
   left: 10px;
   right: 10px;
+  size: 50%;
 }
 div.flecha2{
   position: inherit;
   left: 10px;
   top: 10px;
+  size: 
+  50%;
 }
 }
