--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body{
     color:var(--roxo);
     text-align: center;
     font-size: xxx-large;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
 }
 
 p.titulo2{
