--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body{
     url(./imagens/Group\ 3.png);
   background-color:var(--corfund) ;
 
-  p.titulo1 {
+  h1.titulo1 {
     color:var(--roxo);
     text-align: center;
-    font-size: px;
+    font-size: 100px;
     /* overflow-x: hidden; */
     /* overflow-y: hidden; */
     
