--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     
   background-image:
-    url(./imagens/Slide\ 16_9\ -\ \(1\).png);
+    url(./imagens/Slide\ 16_9\ -\ 1.png).png);
   background-color:var(--corfund) ;
 
 h1.titulo1 {
