--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
     --corfund:#232025;
     --branco: #ffffff;
 }
+@font-face {
+  font-family: "bangers";
+  src: url("./Bangers-Regular.woff2") format("woff2");
+    
+    }
+@font-face {
+  font-family: "bentham";
+  src: url("./Bentham-Regular.ttf") format("ttf");
+}
 body{
     
   background-image:
