--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ header {
     color: var(--branco);
 }
 div.primeira_parte{
-  font-family: bentham;
+    font-family: "Bentham", serif;
     position: relative;
     width: 776px;
     height: fit-content;
