--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1.titulo1 {
   font-size: 100px;
   /* overflow-x: hidden; */
   /* overflow-y: hidden; */
+  font-family: "bentham";
   
 }
 /* div.titulo{
