--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ left: 666px;
   text-align: center;
   color: var(--branco);
   font-family: "andika";
-
+  font-style: normal;
 }
 .sextion {
   
