--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ div.primeira_parte {
   /* margin: 10px; */
   align-items: center;
   top: 56px;
-  right: -340px;
+/*  right: -340px;*/
   font-size: 40px;
 }
 
@@ -140,4 +140,7 @@ img.cur1frbt {
 
 .aleatório {
   font-size: 25px;
+}
+#boton{
+  font-size: inherit;
 }
