--- a/style.css
+++ b/style.css
@@ -116,10 +116,18 @@ img.cur1img {
   height: 418px;
 }
 
-img.cur1frtp {
+img.cur1img {
   position: inherit;
-  top: -240px;
-  left: 10px;
+  left: -93px;
+  top: 81px;
+  height: 418px;
+}
+
+img.cur2img {
+  position: inherit;
+  left: -93px;
+  top: 81px;
+  height: 418px;
 }
 
 img.cur1frbt {
