--- a/style.css
+++ b/style.css
@@ -130,6 +130,13 @@ img.cur2img {
   height: 328px;
 }
 
+img.cur3img {
+  position: inherit;
+  left: -93px;
+  top: -10px;
+  height: 328px;
+}
+
 img.cur1frbt {
   position: inherit;
   top: 30px;
