--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h1.titulo1 {
 }
 
 .titulo1 {
-  position: relative;
+  /*position: relative; */
   top: 10px;
   left: -234px;
   font-family: bangers;
@@ -67,7 +67,7 @@ div.primeira_parte {
   /* margin: 10px; */
   align-items: center;
   top: 56px;
-  right: -340px;
+ /*  right: -340px; */
   font-size: 40px;
 }
 
@@ -123,7 +123,7 @@ div.cur2 {
 
 div.txtcur2 {
   position: inherit;
-/*  left: -93px; */
+  /*  left: -93px; */
   top: -235px;
 }
 
@@ -160,17 +160,20 @@ img.cur1frbt {
 .aleatório {
   font-size: 25px;
 }
-.boton{
+
+.boton {
   font-size: 35px;
   color: white;
 }
-footer{
+
+footer {
   background: black;
   text-align: center;
   color: white;
 
 }
-footer a{
+
+footer a {
   text-decoration: none;
   color: var(--roxo);
 }
