--- a/style.css
+++ b/style.css
@@ -178,6 +178,11 @@ footer a {
   color: var(--roxo);
 }
 
+.cabeçalho {
+  position: relative;
+  top: 15px;
+}
+
 @media screen and (max-width: 1024px) {
 
   .tudo {
