--- a/style.css
+++ b/style.css
@@ -186,7 +186,8 @@ img.cur1frbt {
   font-weight: bold;
   font-size: 35px;
   color: white;
-  left: 243px;
+  left: 1073px;
+  top: -68px;
   position: relative;
 }
 
